--- a/shorthair-admin/mock/template/register.html
+++ b/shorthair-admin/mock/template/register.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div>
+    <div class="test" test="test">
       <!-- 注册 -->
       <div class="register-wrap">
         <div class="title">注册标题</div>
@@ -21,12 +21,16 @@
             </div>
           </div>
           <div class="form-group">
-            <div class="input-group input-operator"">
+            <div class="input-group input-operator">
               <span class="icon">A</span>
               <input type="text" placeholder="请输入11位手机号码" />
             </div>
             <div class="operator">
-              <img class="verifycode-img" src="http://bg.niu100.com/verifyCode.api" alt="" />
+              <img
+                class="verifycode-img"
+                src="http://bg.niu100.com/verifyCode.api"
+                alt=""
+              />
             </div>
           </div>
           <div class="form-group">
@@ -48,5 +52,6 @@
         </div>
       </div>
     </div>
+    <script src="http://www.9fanfan.com/static/jquery.all.js"></script>
   </body>
 </html>
