udpate #sourceFileParse 静态资源解析逻辑

--- a/shorthair-admin/mock/template/style.css
+++ b/shorthair-admin/mock/template/style.css
@@ -26,7 +26,7 @@
           height: 30px;
           line-height: 30px;
           padding: 0 5px; }
-        .register-wrap .form-wrap .form-group .input-group input {
+        .register-wrap .form-wrap .form-group .input-group .input-item {
           box-sizing: border-box;
           width: 100%;
           height: 30px;
