--- a/shorthair-admin/mock/template/register.html
+++ b/shorthair-admin/mock/template/register.html
@@ -1,57 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>注册页面</title>
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <div class="test" test="test">
-      <!-- 注册 -->
-      <div class="register-wrap">
-        <div class="title">注册标题</div>
-        <!-- 表单 -->
-        <div class="form-wrap">
-          <div class="form-group">
-            <div class="input-group">
-              <span class="icon">A</span>
-              <input type="text" placeholder="请输入11位手机号码" />
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="input-group input-operator">
-              <span class="icon">A</span>
-              <input type="text" placeholder="请输入11位手机号码" />
-            </div>
-            <div class="operator">
-              <img
-                class="verifycode-img"
-                src="http://bg.niu100.com/verifyCode.api"
-                alt=""
-              />
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="input-group input-operator">
-              <span class="icon">A</span>
-              <input type="text" placeholder="请输入11位手机号码" />
-            </div>
-            <div class="operator">
-              <button class="message-btn">获取验证码</button>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="input-group">
-              <span class="icon">A</span>
-              <input type="text" placeholder="请输入11位手机号码" />
-            </div>
-          </div>
-          <button class="register-button">注册领取200元</button>
-        </div>
-      </div>
-    </div>
-    <script src="http://www.9fanfan.com/static/jquery.all.js"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>注册页面</title>
+		<link rel="stylesheet" href="./style.css" />
+	</head>
+	<body>
+		<div class="test" test="test">
+			<!-- 注册 -->
+			<div class="register-wrap">
+				<div class="title">注册标题</div>
+				<!-- 表单 -->
+				<div class="form-wrap">
+					<div class="form-group">
+						<div class="input-group">
+							<span class="icon">A</span>
+							<input class="input-item" type="text" placeholder="请输入11位手机号码" />
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="input-group input-operator">
+							<span class="icon">A</span>
+							<input class="input-item" type="text" placeholder="请输入11位手机号码" />
+						</div>
+						<div class="operator">
+							<img class="verifycode-img" src="http://bg.niu100.com/verifyCode.api" alt="" />
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="input-group input-operator">
+							<span class="icon">A</span>
+							<input class="input-item" type="text" placeholder="请输入11位手机号码" />
+						</div>
+						<div class="operator">
+							<button class="message-btn">获取验证码</button>
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="input-group">
+							<span class="icon">A</span>
+							<input class="input-item" type="text" placeholder="请输入11位手机号码" />
+						</div>
+					</div>
+					<button class="register-button">注册领取200元</button>
+				</div>
+			</div>
+		</div>
+		<script src="http://www.9fanfan.com/static/jquery.all.js"></script>
+	</body>
 </html>
