--- a/shorthair-app/src/app/app.component.html
+++ b/shorthair-app/src/app/app.component.html
@@ -9,39 +9,38 @@
     >
       <li nz-menu-item>nav 1</li>
       <li nz-menu-item>nav 2</li>
-      <li nz-menu-item>nav 3</li>
+      <li nz-menu-item>nav 3 {{ activeUrl }}</li>
     </ul>
   </nz-header>
   <nz-layout>
     <nz-sider [nzWidth]="200" style="background:#fff">
-      <ul nz-menu [nzMode]="'inline'" style="height:100%">
-        <li nz-submenu>
-          <span title><i nz-icon type="user"></i>站点</span>
+      <ul
+        nz-menu
+        [nzMode]="'inline'"
+        [nzInlineCollapsed]="false"
+        style="height:100%"
+      >
+        <li nz-submenu *ngFor="let item of menus">
+          <span title><i nz-icon type="user"></i>{{ item.name }}</span>
           <ul>
-            <li nz-menu-item>域名设置</li>
-            <li nz-menu-item>站点解析</li>
-          </ul>
-        </li>
-        <li nz-submenu>
-          <span title><i nz-icon type="laptop"></i>页面</span>
-          <ul>
-            <li nz-menu-item>页面管理</li>
-          </ul>
-        </li>
-        <li nz-submenu>
-          <span title><i nz-icon type="notification"></i>模板</span>
-          <ul>
-            <li nz-menu-item>模板管理</li>
+            <li
+              nz-menu-item
+              [routerLink]="subItem.url"
+              [nzSelected]="activeUrl == subItem.url"
+              *ngFor="let subItem of item.subMenus"
+            >
+              {{ subItem.name }}
+            </li>
           </ul>
         </li>
       </ul>
     </nz-sider>
     <nz-layout style="padding:0 24px 24px">
-      <nz-breadcrumb style="margin:16px 0;">
+      <!-- <nz-breadcrumb style="margin:16px 0;">
         <nz-breadcrumb-item>Home</nz-breadcrumb-item>
         <nz-breadcrumb-item>List</nz-breadcrumb-item>
         <nz-breadcrumb-item>App</nz-breadcrumb-item>
-      </nz-breadcrumb>
+      </nz-breadcrumb> -->
       <nz-content style="background:#fff; padding: 24px; min-height: 280px;">
         <router-outlet></router-outlet>
       </nz-content>
