--- a/shorthair-app/src/app/page/page-list/page-list.component.html
+++ b/shorthair-app/src/app/page/page-list/page-list.component.html
@@ -1,3 +1,26 @@
-<p>
-  page-list works!
-</p>
+<nz-table
+  [nzData]="list"
+  [nzFrontPagination]="false"
+  [nzPageSize]="pageOption.pageSize"
+  [nzTotal]="pageOption.total"
+  (nzPageIndexChange)="pageChange($event)"
+>
+  <thead>
+    <tr>
+      <th>序号</th>
+      <th>页面名称</th>
+      <th>访问地址</th>
+      <th>设备</th>
+      <th>删除</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let data of list; index as i">
+      <td>{{ i + 1 }}</td>
+      <td>{{ data.name }}</td>
+      <td>{{ data.path }}</td>
+      <td>{{ data.device }}</td>
+      <td>{{ data.deleted }}</td>
+    </tr>
+  </tbody>
+</nz-table>
