--- a/shorthair-app/src/app/app.component.html
+++ b/shorthair-app/src/app/app.component.html
@@ -1,12 +1,7 @@
 <nz-layout class="layout">
   <nz-header>
     <div class="logo"></div>
-    <ul
-      nz-menu
-      [nzTheme]="'dark'"
-      [nzMode]="'horizontal'"
-      style="line-height: 64px;"
-    >
+    <ul nz-menu [nzTheme]="'dark'" [nzMode]="'horizontal'" style="line-height: 64px;">
       <li nz-menu-item>nav 1</li>
       <li nz-menu-item>nav 2</li>
       <li nz-menu-item>nav 3 {{ activeUrl }}</li>
@@ -14,19 +9,14 @@
   </nz-header>
   <nz-layout>
     <nz-sider [nzWidth]="200" style="background:#fff">
-      <ul
-        nz-menu
-        [nzMode]="'inline'"
-        [nzInlineCollapsed]="false"
-        style="height:100%"
-      >
-        <li nz-submenu *ngFor="let item of menus">
-          <span title><i nz-icon type="user"></i>{{ item.name }}</span>
+      <ul nz-menu [nzMode]="'inline'" [nzInlineCollapsed]="false" style="height:100%">
+        <li nz-submenu *ngFor="let item of menus" [nzOpen]="activeId === item.id">
+          <span title><i nz-icon [type]="item.icon"></i>{{ item.name }}</span>
           <ul>
             <li
               nz-menu-item
               [routerLink]="subItem.url"
-              [nzSelected]="activeUrl == subItem.url"
+              [nzSelected]="activeUrl === subItem.url"
               *ngFor="let subItem of item.subMenus"
             >
               {{ subItem.name }}
