--- a/shorthair-app/src/app/page/page-edit/page-edit.component.html
+++ b/shorthair-app/src/app/page/page-edit/page-edit.component.html
@@ -1,4 +1,51 @@
-<div class="form-group">
-  <label for="alterEgo">Alter Ego</label>
-  <input name="name" nz-input placeholder="页面名称" [(ngModel)]="obj.name" />
-</div>
+<form nz-form (ngSubmit)="submitForm()" [formGroup]="validateForm">
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" [nzFor]="name" nzRequired>页面名称</nz-form-label>
+    <nz-form-control [nzSm]="8" [nzXs]="24">
+      <input nz-input id="name" formControlName="name" />
+      <nz-form-explain *ngIf="validateForm.get('name')?.dirty && validateForm.get('name')?.errors"
+        >输入不能为空</nz-form-explain
+      >
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" [nzFor]="path" nzRequired>页面地址</nz-form-label>
+    <nz-form-control [nzSm]="8" [nzXs]="24">
+      <input nz-input id="path" formControlName="path" />
+      <nz-form-explain *ngIf="validateForm.get('path')?.dirty && validateForm.get('path')?.errors"
+        >输入不能为空</nz-form-explain
+      >
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" [nzFor]="device" nzRequired>终端</nz-form-label>
+    <nz-form-control [nzSm]="8" [nzXs]="24">
+      <nz-select id="device" formControlName="device" nzPlaceHolder="请选择终端">
+        <nz-option [nzValue]="'pc'" nzLabel="pc"></nz-option>
+        <nz-option [nzValue]="'h5'" nzLabel="h5"></nz-option>
+      </nz-select>
+      <nz-form-explain
+        *ngIf="validateForm.get('device')?.dirty && validateForm.get('device')?.errors"
+        >输入不能为空</nz-form-explain
+      >
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" [nzFor]="deleted" nzRequired>删除状态</nz-form-label>
+    <nz-form-control [nzSm]="8" [nzXs]="24">
+      <nz-select id="deleted" formControlName="deleted" nzPlaceHolder="请选择删除状态">
+        <nz-option [nzValue]="true" nzLabel="true"></nz-option>
+        <nz-option [nzValue]="false" nzLabel="false"></nz-option>
+      </nz-select>
+      <nz-form-explain
+        *ngIf="validateForm.get('deleted')?.dirty && validateForm.get('deleted')?.errors"
+        >输入不能为空</nz-form-explain
+      >
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item nz-row style="margin-bottom:8px;">
+    <nz-form-control [nzSpan]="14" [nzOffset]="6">
+      <button nz-button nzType="primary">更新</button>
+    </nz-form-control>
+  </nz-form-item>
+</form>
