build #page create

--- a/shorthair-app/src/app/page/page-list/page-list.component.html
+++ b/shorthair-app/src/app/page/page-list/page-list.component.html
@@ -1,3 +1,6 @@
+<div class="operate">
+  <button nz-button [nzType]="'primary'" [routerLink]="['/page/create']">新增</button>
+</div>
 <nz-table
   [nzData]="list"
   [nzFrontPagination]="false"
