--- a/shorthair-app/src/app/template/template-list/template-list.component.html
+++ b/shorthair-app/src/app/template/template-list/template-list.component.html
@@ -1,3 +1,36 @@
-<p>
-  template-list works!
-</p>
+<div class="operate">
+  <button nz-button [nzType]="'primary'" [routerLink]="['/template/create']">新增</button>
+</div>
+<nz-table
+  [nzData]="list"
+  [nzFrontPagination]="false"
+  [nzPageSize]="pageOption.pageSize"
+  [nzTotal]="pageOption.total"
+  (nzPageIndexChange)="pageChange($event)"
+>
+  <thead>
+    <tr>
+      <th>序号</th>
+      <th>模板名称</th>
+      <th>根节点id</th>
+      <th>节点id</th>
+      <th>操作</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let data of list; index as i">
+      <td>{{ i + 1 }}</td>
+      <td>{{ data.name }}</td>
+      <td>{{ data.rootId }}</td>
+      <td>{{ data.nodeId }}</td>
+      <td>
+        <app-button-operator
+          [id]="data.id"
+          [updateLink]="['/template', data.id]"
+          [deleteStatus]="data.deleted"
+          (deleteEvent)="deleteById($event)"
+        ></app-button-operator>
+      </td>
+    </tr>
+  </tbody>
+</nz-table>
