--- a/shorthair-app/src/app/node/node-tree/node-tree.component.html
+++ b/shorthair-app/src/app/node/node-tree/node-tree.component.html
@@ -1,3 +1,22 @@
-<nz-tree #treeCom [nzData]="nodes" nzShowLine (nzClick)="chooseNode($event)"> </nz-tree>
+<div nz-row>
+  <div nz-col nzSpan="8">
+    <button nz-button (click)="addNode()">添加节点</button>
+    <button nz-button nzType="danger" (click)="deleteNode()">删除节点</button>
 
-<button nz-button (click)="addChildNode()">添加子节点</button>
+    <nz-tree
+      #treeCom
+      [nzData]="treeNodes"
+      nzCheckable
+      nzShowLine
+      (nzCheckBoxChange)="chooseNode($event)"
+      (nzClick)="chooseNode($event)"
+    >
+    </nz-tree>
+  </div>
+  <div nz-col nzSpan="16">
+    <app-node-eidt [id]="currentKey" *ngIf="currentKey"></app-node-eidt>
+    <button nz-button (click)="addAttribute()">添加属性</button>
+
+    <template appAttribute></template>
+  </div>
+</div>
