--- a/shorthair-app/src/app/node/attribute-item/attribute-item.component.html
+++ b/shorthair-app/src/app/node/attribute-item/attribute-item.component.html
@@ -1,3 +1,25 @@
-<p>
-  attribute-item works!
-</p>
+<nz-form-item>
+  <div nz-row>
+    <div nz-col [nzSm]="6" [nzXs]="24">
+      <nz-select
+        style="width: 120px;"
+        [(ngModel)]="attribute.name"
+        nzAllowClear
+        nzPlaceHolder="请选择属性类别"
+      >
+        <nz-option nzValue="className" nzLabel="className"></nz-option>
+        <nz-option nzValue="placeholder" nzLabel="placeholder"></nz-option>
+      </nz-select>
+    </div>
+    <div nz-col [nzSm]="8" [nzXs]="24">
+      <input
+        nz-input
+        placeholder="请输入属性值"
+        [(ngModel)]="attribute.value"
+      />
+    </div>
+    <button nz-button nzType="primary" (click)="showStyleTableModal($event)">
+      添加样式
+    </button>
+  </div>
+</nz-form-item>
