--- a/shorthair-app/src/app/node/node-eidt/node-eidt.component.html
+++ b/shorthair-app/src/app/node/node-eidt/node-eidt.component.html
@@ -1,7 +1,11 @@
 <form nz-form (ngSubmit)="submitForm()" [formGroup]="form">
   <nz-form-item>
-    <nz-form-label [nzSm]="6" [nzXs]="24" [nzFor]="name" nzRequired>节点名称</nz-form-label>
-    <nz-form-control [nzSm]="8" [nzXs]="24">
+    <nz-form-label nzSpan="5" [nzFor]="name" nzRequired>节点 id</nz-form-label>
+    <nz-form-label nzSpan="8">{{ id }}</nz-form-label>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label nzSpan="5" [nzFor]="name" nzRequired>节点名称</nz-form-label>
+    <nz-form-control nzSpan="8">
       <input nz-input id="name" formControlName="name" />
       <nz-form-explain *ngIf="form.get('name')?.dirty && form.get('name')?.errors"
         >输入不能为空</nz-form-explain
@@ -9,8 +13,8 @@
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label [nzSm]="6" [nzXs]="24" [nzFor]="nodeType" nzRequired>元素类型</nz-form-label>
-    <nz-form-control [nzSm]="8" [nzXs]="24">
+    <nz-form-label nzSpan="5" [nzFor]="nodeType" nzRequired>元素类型</nz-form-label>
+    <nz-form-control nzSpan="8">
       <nz-select id="nodeType" formControlName="nodeType" nzPlaceHolder="请选择元素类型">
         <nz-option [nzValue]="1" nzLabel="普通"></nz-option>
         <nz-option [nzValue]="3" nzLabel="文本"></nz-option>
@@ -21,8 +25,8 @@
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label [nzSm]="6" [nzXs]="24" [nzFor]="tag" nzRequired>标签</nz-form-label>
-    <nz-form-control [nzSm]="8" [nzXs]="24">
+    <nz-form-label nzSpan="5" [nzFor]="tag" nzRequired>标签</nz-form-label>
+    <nz-form-control nzSpan="8">
       <nz-select id="tag" formControlName="tag" nzPlaceHolder="请选择标签">
         <nz-option [nzValue]="'div'" nzLabel="div"></nz-option>
         <nz-option [nzValue]="'span'" nzLabel="span"></nz-option>
@@ -32,8 +36,23 @@
       >
     </nz-form-control>
   </nz-form-item>
+  <!-- attributes -->
+  <nz-form-item *ngFor="let item of attributes">
+    <nz-form-label nzSpan="5">{{ item.name }}</nz-form-label
+    ><nz-form-control nzSpan="8">
+      <input nz-input [id]="item.name" [formControlName]="item.name" nzSpan="8"
+    /></nz-form-control>
+  </nz-form-item>
+  <template appAttribute></template>
+  <nz-form-item>
+    <nz-form-control nzOffset="5">
+      <button nz-button nzType="dashed" (click)="addAttributeField($event)">
+        <i nz-icon type="plus"></i> 新增属性
+      </button>
+    </nz-form-control>
+  </nz-form-item>
   <nz-form-item nz-row style="margin-bottom:8px;">
-    <nz-form-control [nzSpan]="14" [nzOffset]="6">
+    <nz-form-control [nzSpan]="11" [nzOffset]="3">
       <button nz-button nzType="primary">更新</button>
     </nz-form-control>
   </nz-form-item>
