--- a/shorthair-app/src/app/page/page-list/page-list.component.html
+++ b/shorthair-app/src/app/page/page-list/page-list.component.html
@@ -1,7 +1,8 @@
 <div class="operate">
   <button nz-button [nzType]="'primary'" [routerLink]="['/page/create']">新增</button>
 </div>
-<nz-table [nzData]="list" [nzFrontPagination]="false" [nzPageSize]="pageOption.pageSize" [nzTotal]="pageOption.total" (nzPageIndexChange)="pageChange($event)">
+<nz-table [nzData]="list" [nzFrontPagination]="false" [nzPageSize]="pageOption.pageSize" [nzTotal]="pageOption.total"
+  (nzPageIndexChange)="pageChange($event)">
   <thead>
     <tr>
       <th>序号</th>
@@ -20,7 +21,10 @@
       <td>{{ data.device == 1 ? 'mobile' : 'pc' }}</td>
       <td>{{ data.state == 1 ? '已发布' : '未发布' }}</td>
       <td>
-        <app-button-operator [id]="data.id" [updateLink]="['/page', data.id]" [deleteApi]="'/api/pages/' + data.id" [deleteStatus]="data.deleted" (deleteEvent)="deleteById($event)"></app-button-operator>
+        <app-button-operator [id]="data.id" [updateLink]="['/page', data.id]" [deleteApi]="'/api/pages/' + data.id"
+          [deleteStatus]="data.deleted" (deleteEvent)="deleteById($event)"></app-button-operator>
+        <button nz-button nzSize="small" [routerLink]="['/template/draw']"
+          [queryParams]="{pageId:data.id,templateId:data.templateId}">绘制页面</button>
       </td>
     </tr>
   </tbody>
