--- a/shorthair-app/src/app/template/template-draw/template-draw.component.html
+++ b/shorthair-app/src/app/template/template-draw/template-draw.component.html
@@ -2,9 +2,10 @@
   <div nz-col nzSpan="12">
     <nz-tabset [nzTabPosition]="'top'" [nzType]="'card'">
       <nz-tab *ngFor="let tab of tabs" [nzTitle]="tab.title">
-        <app-position-panel *ngIf="tab.id==1"></app-position-panel>
-        <app-surface-panel *ngIf="tab.id==2"></app-surface-panel>
-        <app-event-panel *ngIf="tab.id==3"></app-event-panel>
+        <app-tree-panel *ngIf="tab.id == 1" (updateNodeEvent)="updateNode($event)" [node]="template.node"></app-tree-panel>
+        <app-surface-panel *ngIf="tab.id == 3" [node]="currentNode" (updateNodeEvent)="updateNode($event)"></app-surface-panel>
+        <app-position-panel *ngIf="tab.id == 2"></app-position-panel>
+        <app-event-panel *ngIf="tab.id == 4"></app-event-panel>
       </nz-tab>
     </nz-tabset>
     <button (click)="saveTemplate()">保存</button>
